2004-02-10  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* avrdude.1, doc/avrdude.texi, doc/TODO:
	Removed the deprecated options from documentation

2004-02-10  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* main.c: Removed deprecated options.

2004-01-28  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* pgm.c, main.c, avr910.c, butterfly.c, stk500.c:
	Changed default for powerup, powerdown and LED-commands
	to do nothing and return OK. Then removed these commands
	from avr910, butterfly and stk500.
	* pgm.c: Fixed wrong type for default_open introduced by
	the cleanup yesterday.


2004-01-29  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* par.c: changed order of port-read/writes in par_txrx().
	This change should increase immunity to delays in the
	programmer-hardware.
	Also did some unrelated cleanup in par_txrx().

2004-01-28  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* pgm.[ch], main.c, par.c, avr910.c, butterfly.c, stk500.c:
	Move save/restore-functionality into open/close.
	* par.c: open/close now saves/restores PPICTRL, too.
	* TODO: exitspecs don't work if RESET is in PPICTRL.

2004-01-26  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Post release version update.

2004-01-26  Theodore A. Roth  <troth@openavr.org>

	* AVRDUDE 4.3.0 has been released (cvs release tag is "release_4_3_0").

2004-01-26  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Update copyright year.
	(AC_INIT): Set version to 4.3.0.

2004-01-25  Theodore A. Roth  <troth@openavr.org>

	* ChangeLog: Minor formatting cleanups.
	Move to all 2003 entries to ChangeLog-2003.
	* ChangeLog-2003: New file.
	* Makefile.am: Update copyright year.
	(EXTRA_DIST): Add ChangeLog-2003.

2004-01-17  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* doc/avrdude.texi: Get rid of those black boxes marking "overfull
	hbox".

2004-01-17  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* doc/avrdude.texi: New appendix "Troubleshooting".
